--- a/resources/views/crawler/crawler_violetblue.html
+++ b/resources/views/crawler/crawler_violetblue.html
@@ -155,6 +155,7 @@
     $(document).ready(function () {
       var colors = [];
       var popularColors = [];
+      var selectedPopularColors = [];
       var surfaceColors = {
         tran_nha: [],
         tuong: []
@@ -200,13 +201,16 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 10,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
           };
+          if (popularColors.includes('' + name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
 
           for (let surfaceName in surfaceColors) {
             // console.log('surface name', surfaceName);
@@ -234,13 +238,16 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 10,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 1,
             surfaces: [],
             projectTypes: []
           };
+          if (popularColors.includes('' + name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
           for (let surfaceName in surfaceColors) {
             let surfaceColor = surfaceColors[surfaceName];
             let surfaceId = surfaces[surfaceName];
@@ -265,9 +272,9 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 10,
             mixed_by_computer: 0,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
