--- a/resources/views/crawler/crawler_white.html
+++ b/resources/views/crawler/crawler_white.html
@@ -94,7 +94,7 @@
             }
               result += (eleType === 'object' ? tab : '') + convertToPHPArray(inp, format, tab) + ',';
           }
-          result +=  (eleType === 'object' ? '\n' : '') + endTag; 
+          result +=  (eleType === 'object' ? '\n' : '') + endTag;
       } else if (!Array.isArray(input) && typeof input === 'object') {
           result += startTag + '\n';
           let newTab = tab + '    ';
@@ -150,6 +150,7 @@
     $(document).ready(function () {
       var colors = [];
       var popularColors = [];
+      var selectedPopularColors = [];
       var surfaceColors = {
         tran_nha: [],
         tuong: []
@@ -167,7 +168,7 @@
       $('.color_popular').find('.color-box-child')
         .each((idx, item) => {
           let name = "" + $(item).data('title');
-          if (!popularColors.includes(name)) {
+          if (!popularColors.includes('' + name)) {
             popularColors.push("" + name);
           }
         });
@@ -175,7 +176,7 @@
         $('#' + surface).find('.color-box-child')
           .each((idx, item) => {
             let name = "" + $(item).data('title');
-            surfaceColors[surface].push("" + name);
+            surfaceColors[surface].push(name);
           });
       }
 
@@ -186,7 +187,7 @@
             projectColors[project].push("" + name);
           });
       }
-      console.log(surfaceColors);
+
       $('#num_popular_color').html(popularColors.length + ' mau');
 
       $('#nor_mixedbycomputer').find('.color-box-child')
@@ -198,11 +199,14 @@
             color: '#' + color,
             color_group_id: 1,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes('' + name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
           };
+          if (popularColors.includes('' +name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
 
           for (let surfaceName in surfaceColors) {
             // console.log('surface name', surfaceName);
@@ -220,7 +224,7 @@
               colorDt.projectTypes.push(projectId);
             }
           }
-          
+
           colors.push(colorDt);
         });
       $('#deep_mixedbycomputer').find('.color-box-child')
@@ -232,11 +236,16 @@
             color: '#' + color,
             color_group_id: 1,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 1,
             surfaces: [],
             projectTypes: []
           };
+
+          if (popularColors.includes('' +name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
+
           for (let surfaceName in surfaceColors) {
             let surfaceColor = surfaceColors[surfaceName];
             let surfaceId = surfaces[surfaceName];
@@ -251,7 +260,7 @@
               colorDt.projectTypes.push(projectId);
             }
           }
-          
+
           colors.push(colorDt);
         });
       $('#color_available').find('.color-box-child')
@@ -282,7 +291,7 @@
               colorDt.projectTypes.push(projectId);
             }
           }
-          
+
           colors.push(colorDt);
         });
       let text = convertToPHPArray(colors);
