--- a/resources/views/crawler/crawler_green.html
+++ b/resources/views/crawler/crawler_green.html
@@ -107,7 +107,7 @@
             }
               result += (eleType === 'object' ? tab : '') + convertToPHPArray(inp, format, tab) + ',';
           }
-          result +=  (eleType === 'object' ? '\n' : '') + endTag; 
+          result +=  (eleType === 'object' ? '\n' : '') + endTag;
       } else if (!Array.isArray(input) && typeof input === 'object') {
           result += startTag + '\n';
           let newTab = tab + '    ';
@@ -163,6 +163,7 @@
     $(document).ready(function () {
       var colors = [];
       var popularColors = [];
+      var selectedPopularColors = [];
       var surfaceColors = {
         tran_nha: [],
         tuong: []
@@ -208,13 +209,17 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 7,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
           };
+
+          if (popularColors.includes('' + name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
 
           for (let surfaceName in surfaceColors) {
             // console.log('surface name', surfaceName);
@@ -232,7 +237,7 @@
               colorDt.projectTypes.push(projectId);
             }
           }
-          
+
           colors.push(colorDt);
         });
       $('#deep_mixedbycomputer').find('.color-box-child')
@@ -242,13 +247,16 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 7,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 1,
             surfaces: [],
             projectTypes: []
           };
+          if (popularColors.includes('' + name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
           for (let surfaceName in surfaceColors) {
             let surfaceColor = surfaceColors[surfaceName];
             let surfaceId = surfaces[surfaceName];
@@ -263,7 +271,7 @@
               colorDt.projectTypes.push(projectId);
             }
           }
-          
+
           colors.push(colorDt);
         });
         $('#color_available').find('.color-box-child')
@@ -273,9 +281,9 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 7,
             mixed_by_computer: 0,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
@@ -294,7 +302,7 @@
               colorDt.projectTypes.push(projectId);
             }
           }
-          
+
           colors.push(colorDt);
         });
       let text = convertToPHPArray(colors);
