--- a/resources/views/crawler/crawler_lemon_yellow.html
+++ b/resources/views/crawler/crawler_lemon_yellow.html
@@ -155,6 +155,7 @@
     $(document).ready(function () {
       var colors = [];
       var popularColors = [];
+      var selectedPopularColors = [];
       var surfaceColors = {
         tran_nha: [],
         tuong: []
@@ -200,13 +201,17 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 6,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
           };
+
+          if (popularColors.includes('' +name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
 
           for (let surfaceName in surfaceColors) {
             // console.log('surface name', surfaceName);
@@ -234,13 +239,16 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 6,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 1,
             surfaces: [],
             projectTypes: []
           };
+          if (popularColors.includes('' + name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
           for (let surfaceName in surfaceColors) {
             let surfaceColor = surfaceColors[surfaceName];
             let surfaceId = surfaces[surfaceName];
@@ -262,16 +270,32 @@
         .each((idx, item) => {
           let name = $(item).data('title');
           let color = $(item).data('id');
-          colors.push({
+          let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 6,
             mixed_by_computer: 0,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: 0,
             is_deep_color: 0,
-            surfaces: Object.values(surfaces),
-            projectTypes: Object.values(projects)
-          });
+            surfaces: [],
+            projectTypes: []
+          };
+          for (let surfaceName in surfaceColors) {
+            let surfaceColor = surfaceColors[surfaceName];
+            let surfaceId = surfaces[surfaceName];
+            if (surfaceColor.length == 0 || surfaceColor.includes(name)) {
+              colorDt.surfaces.push(surfaceId);
+            }
+          }
+          for (let projectName in projectColors) {
+            let projectId = projects[projectName];
+            let projectColor = projectColors[projectName];
+            if (projectColor.length == 0 || projectColor.includes(name)) {
+              colorDt.projectTypes.push(projectId);
+            }
+          }
+
+          colors.push(colorDt);
         });
       let text = convertToPHPArray(colors);
       $('#display_data').html(text);
