--- a/resources/views/crawler/crawler_red.html
+++ b/resources/views/crawler/crawler_red.html
@@ -163,6 +163,7 @@
     $(document).ready(function () {
       var colors = [];
       var popularColors = [];
+      var selectedPopularColors = [];
       var surfaceColors = {
         tran_nha: [],
         tuong: []
@@ -199,7 +200,6 @@
             projectColors[project].push("" + name);
           });
       }
-      console.log(surfaceColors);
 
       $('#nor_mixedbycomputer').find('.color-box-child')
         .each((idx, item) => {
@@ -208,13 +208,17 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 2,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 0,
             surfaces: [],
             projectTypes: []
           };
+
+          if (popularColors.includes('' +name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
 
           for (let surfaceName in surfaceColors) {
             // console.log('surface name', surfaceName);
@@ -242,13 +246,17 @@
           let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 2,
             mixed_by_computer: 1,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: popularColors.includes(name) && !selectedPopularColors.includes('' + name) ? 1 : 0,
             is_deep_color: 1,
             surfaces: [],
             projectTypes: []
           };
+          if (popularColors.includes('' +name) && !selectedPopularColors.includes('' + name)) {
+              selectedPopularColors.push("" + name);
+          }
+
           for (let surfaceName in surfaceColors) {
             let surfaceColor = surfaceColors[surfaceName];
             let surfaceId = surfaces[surfaceName];
@@ -270,16 +278,31 @@
         .each((idx, item) => {
           let name = $(item).data('title');
           let color = $(item).data('id');
-          colors.push({
+          let colorDt = {
             name: "" + name,
             color: '#' + color,
-            color_group_id: 1,
+            color_group_id: 2,
             mixed_by_computer: 0,
-            is_popular: popularColors.includes(name) ? 1 : 0,
+            is_popular: 0,
             is_deep_color: 0,
-            surfaces: Object.values(surfaces),
-            projectTypes: Object.values(projects)
-          });
+            surfaces: [],
+            projectTypes: []
+          };
+          for (let surfaceName in surfaceColors) {
+            let surfaceColor = surfaceColors[surfaceName];
+            let surfaceId = surfaces[surfaceName];
+            if (surfaceColor.length == 0 || surfaceColor.includes(name)) {
+              colorDt.surfaces.push(surfaceId);
+            }
+          }
+          for (let projectName in projectColors) {
+            let projectId = projects[projectName];
+            let projectColor = projectColors[projectName];
+            if (projectColor.length == 0 || projectColor.includes(name)) {
+              colorDt.projectTypes.push(projectId);
+            }
+          }
+          colors.push(colorDt);
         });
       let text = convertToPHPArray(colors);
       $('#display_data').html(text);
