--- a/resources/views/frontend/find_color/clone_css.html
+++ b/resources/views/frontend/find_color/clone_css.html
@@ -20,6 +20,8 @@
                 <textarea name="" id="display_list_product" cols="200" rows="10"></textarea>
                 <p>6.Chi Tiết Sản phẩm</p><br>
                 <textarea name="" id="display_detail_product" cols="200" rows="10"></textarea>
+                <p>7.Chi Tiết Bài Viết</p><br>
+                <textarea name="" id="display_detail_post" cols="200" rows="10"></textarea>
             </div>
         </div>
     
@@ -107,6 +109,20 @@
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             
         </div>
+
+        <div id="detail_post">
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__K4ADcP97VvUIWyT2PVM3CzecH82Ibl_yKxop4HNaLq0__YLVkfXZKRmmwpeog85mXXBts7RIGEZsmdWPEjQqLFOE__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+        </div>
     </body>
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -145,6 +161,7 @@
                 list_product: [],
                 detail_product: [],
                 y_tuong: [],
+                detail_post:[]
             };
             for (let page in pageCss) {
                 $('#' + page).find('.link_css').each((idx, link) => {
